syntax = "proto3";

package polling;

option go_package = "genprotos/";

import "protos/void.proto";
// import "void.proto";


service PollService {
    rpc Create(PollCreateReq) returns (Void);
    rpc Update(PollUpdateReq) returns (Void);
    rpc Delete(ByID) returns (Void);
    rpc GetByID(ByID) returns (PollGetByIDRes);
    rpc GetAll(PollGetAllReq) returns (PollGetAllRes);
}

message PollCreateReq {
    string title = 1;
    map<string, string> options = 2; // JSONB is stored as a string
}

message PollUpdateReq {
    string id = 1;
    string title = 3;
}

message PollGetByIDRes {
    string id = 1;
    int32 poll_num = 2;
    string title = 3;
    string options = 4; // JSONB is stored as a string
}

message PollGetAllReq {
    string user_id = 1;
}

message PollGetAllRes {
    repeated PollGetByIDRes poll = 1;
}


