syntax = "proto3";

package polling;

option go_package = "genprotos/";

import "protos/void.proto";
// import "void.proto";

service QuestionService {
    rpc Create(QuestionCreateReq) returns (Void);
    rpc Update(QuestionUpdateReq) returns (Void);
    rpc Delete(ByID) returns (Void);
    rpc GetByID(ByID) returns (QuestionGetByIDRes);
    rpc GetAll(QuestionGetAllReq) returns (QuestionGetAllRes);
}

message QuestionCreateReq {
    int32 num = 1;
    string content = 2;
    string poll_id = 3; // Reference to Poll ID
}

message QuestionUpdateReq {
    string id = 1;      // ID of the question to be updated
    int32 num = 2;
    string content = 3;
    string poll_id = 4; // Reference to Poll ID
}

message QuestionGetByIDRes {
    string id = 1;      // ID of the question
    int32 num = 2;
    string content = 3;
    string poll_id = 4; // Reference to Poll ID
}

message QuestionGetAllRes {
    repeated Question question = 1; // List of questions
}

message QuestionGetAllReq {
    Pagination Pagination = 1;
}

message Question {
    string id = 1;      // ID of the question
    int32 num = 2;
    string content = 3;
    string poll_id = 4; // Reference to Poll ID
}
